noinst_LTLIBRARIES = libklt.la

libklt_la_SOURCES = convolve.c \
				 error.c \
				 pnmio.c \
				 pyramid.c \
				 selectGoodFeatures.c \
				 storeFeatures.c \
				 trackFeatures.c \
				 klt.c \
				 klt_util.c \
				 writeFeatures.c \
				 base.h	\
				 convolve.h \
				 error.h \
				 klt.h \
				 klt_util.h	\
				 pnmio.h \
				 pyramid.h

libklt_la_LIBADD = -lm
